fix: better z-index to overlay file-upload component

--- a/src/components/Dialog/styles.scss
+++ b/src/components/Dialog/styles.scss
@@ -1,7 +1,7 @@
 div.shade {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100vw;
   height: 100%;
   background-color: rgba(17,17,17,0.6);
@@ -14,7 +14,7 @@ div.shade {
 div.dialog {
   display: inline-block;
   min-width: 375px;
-  z-index: 2;
+  z-index: 11;
   box-sizing: border-box;
   padding: 24px;
   border-radius: 5px;
